MAJOR updates + first publish to QuartoPub

--- a/be-less-wrong/be-less-wrong.css
+++ b/be-less-wrong/be-less-wrong.css
@@ -9,3 +9,15 @@ blockquote {
 .blockquote {
   font-size: 125%;
 }
+.boxred {
+  border-style: solid;
+  border-color: red;
+  border-radius: 5px;
+  padding: 5px;
+}
+.boxgreen {
+  border-style: solid;
+  border-color: green;
+  border-radius: 5px;
+  padding: 5px;
+}
