--- a/parenting.css
+++ b/parenting.css
@@ -1,3 +1,12 @@
 h1.title, .title.h1 {
     font-size: 300%;
 }
+.sticky-col-stack {
+    container-name: sticks;
+    container-type: size;
+}
+
+.html-widget {
+    width: 100cqw !important;
+    height: 100cqh !important;
+}
