--- a/be-less-wrong/be-less-wrong.css
+++ b/be-less-wrong/be-less-wrong.css
@@ -27,8 +27,15 @@ blockquote {
     container-name: sticks;
     container-type: size;
 }
-
 .html-widget {
     width: 100cqw !important;
     height: 100cqh !important;
+}
+@media only screen and (max-width: 575px) {
+  .narrative {
+    .citation { 
+      a {color: cyan;}
+  }
+  .boxgreen {background-color: white;}
+ }
 }
