better CSS for footnotes; tweaking wording

--- a/be-less-wrong/be-less-wrong.css
+++ b/be-less-wrong/be-less-wrong.css
@@ -36,6 +36,7 @@ blockquote {
     .citation { 
       a {color: cyan;}
   }
+  .footnote-ref {color: cyan;}
   .boxgreen {background-color: white;}
  }
 }
