--- a/spillover-of-violence/spillover-of-violence.css
+++ b/spillover-of-violence/spillover-of-violence.css
@@ -19,6 +19,10 @@ blockquote {
   border-left: 5px solid green; 
   padding: 0.5em 10px;
 }
+.firstbox {
+  color: black;
+  background-color: white;
+}
 .sticky-col {
   margin-left: 10px;
   margin-right: 30px;
