.narrative font-size

--- a/spillover-of-violence/spillover-of-violence.css
+++ b/spillover-of-violence/spillover-of-violence.css
@@ -35,6 +35,9 @@ blockquote {
     width: 100cqw !important;
     height: 100cqh !important;
 }
+.narrative {
+    font-size: 125%;
+}
 @media only screen and (max-width: 575px) {
   .narrative {
     .citation { 
