media responsive CSS for text size

--- a/spillover-of-violence/spillover-of-violence.css
+++ b/spillover-of-violence/spillover-of-violence.css
@@ -35,8 +35,11 @@ blockquote {
     width: 100cqw !important;
     height: 100cqh !important;
 }
-.narrative {
+
+@media screen and (min-width: 575px) { 
+  .narrative {
     font-size: 125%;
+  }
 }
 @media only screen and (max-width: 575px) {
   .narrative {
