--- a/parenting.css
+++ b/parenting.css
@@ -10,3 +10,8 @@ h1.title, .title.h1 {
     width: 100cqw !important;
     height: 100cqh !important;
 }
+@media screen and (min-width: 575px) { 
+  .narrative {
+    font-size: 125%;
+  }
+}
