--- a/empathy/empathy.css
+++ b/empathy/empathy.css
@@ -22,7 +22,7 @@ h1.title, .title.h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 200px;
+  height: 100%;
 } 
 
 
